# lua-bridge-sample

./: .gitignore  CMakeLists.txt  Makefile  README.md  lua_test1  lua_test1.cpp  vcpkg.json
1-call-lua-function-from-cpp/: CMakeLists.txt  main.cpp
2-call-cpp-function-from-lua/: CMakeLists.txt  main.cpp  sample-2.lua
3-expose-cpp-class-to-lua/: CMakeLists.txt  main.cpp
4-use-class-operators-in-lua/: CMakeLists.txt  main.cpp
5-pass-list-of-objects-to-lua/: CMakeLists.txt  main.cpp
6-pass-map-from-lua-to-cpp/: CMakeLists.txt  main.cpp  sample-6.lua
7-return-multiple-values-from-function/: CMakeLists.txt  main.cpp  sample-7.lua
8-shared-library/: CMakeLists.txt  library.cpp  sample-8.lua
9-pass-map-from-cpp-to-lua/: CMakeLists.txt  main.cpp  sample-9.lua
sample-1/: CMakeLists.txt  sample-1.cpp  sample-1.lua
sample-2/: CMakeLists.txt  sample-2.cpp
sample-3/: CMakeLists.txt  sample-3.lua
sample-4/: CMakeLists.txt  sample-4.cpp  sample-4.lua
sample-5/: CMakeLists.txt  sample-5.cpp  sample-5.lua
sample-6/: CMakeLists.txt
src/: main.cpp  test1.lua
