cmake_minimum_required(VERSION 3.10)

project(lua-bridge-samples)

add_subdirectory(1-call-lua-function-from-cpp)
add_subdirectory(2-call-cpp-function-from-lua)
add_subdirectory(3-expose-cpp-class-to-lua)
add_subdirectory(4-use-class-operators-in-lua)
add_subdirectory(5-pass-list-of-objects-to-lua)
add_subdirectory(6-pass-map-from-lua-to-cpp)
